# Object-Orientend-Programming

./: README.md
cpy lb4/: CMakeLists.txt
cpy lb4/LAB 4 OOP/: LAB 4 OOP.sln
cpy lb4/LAB 4 OOP/ComplexTests/: ComplexTests.cpp  ComplexTests.vcxproj  ComplexTests.vcxproj.filters
cpy lb4/LAB 4 OOP/LAB 4 OOP/: Dog.cpp  Dog.h  DynamicArray.cpp  DynamicArray.h  DynamicArrayItterator.cpp  DynamicArrayItterator.h  LAB 4 OOP.vcxproj  LAB 4 OOP.vcxproj.filters  Service.cpp  Service.h  UndoRedo.cpp  UndoRedo.h  a67.mdj  adoption.cpp  adoption.h  app.cpp  app.h  exceptions.cpp  exceptions.h  input.txt  main.cpp  repoDog.cpp  repoDog.h  validators.cpp  validators.h
cpy lb4/LAB 4 OOP/LAB 4 OOP/Qt/: Admin.cpp  Admin.h  Menu.cpp  Menu.h  QtApp.cpp  QtApp.h  User.cpp  User.h
cpy lb4/LAB 4 OOP/LAB 4 OOP/x64/Debug/: LAB 4 OOP.exe.recipe  vc142.idb
cpy lb4/LAB 4 OOP/LAB 4 OOP/x64/Debug/LAB 4 OOP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LAB 4 OOP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpy lb4/LAB 4 OOP/x64/Debug/: LAB 4 OOP.ilk
examen_lucrat/Meniu/: CMakeLists.txt  main.cpp
examen_lucrat/WR2/: CMakeLists.txt  main.cpp
examen_lucrat/WRITTEN_EXAM/: CMakeLists.txt  main.cpp
examen_lucrat/adder/: CMakeLists.txt  main.cpp
examen_lucrat/code_revision/: CMakeLists.txt  GUIObserver.cpp  GUIObserver.h  Programmer.cpp  Programmer.h  RepoProgrammer.cpp  RepoProgrammer.h  RepoSourceFile.cpp  RepoSourceFile.h  Service.cpp  Service.h  SourceFile.cpp  SourceFile.h  exceptions.cpp  exceptions.h  main.cpp  programmers.txt  source_files.txt
examen_lucrat/complex/: CMakeLists.txt  main.cpp
examen_lucrat/examne_practic/: Building.cpp  Building.h  CMakeLists.txt  Ethnologist.cpp  Ethnologist.h  GUIObserver.cpp  GUIObserver.h  RepoBuildings.cpp  RepoBuildings.h  RepoEthnologists.cpp  RepoEthnologists.h  Service.cpp  Service.h  main.cpp
examen_lucrat/math/: main.cpp
examen_lucrat/pb_written1_moodle/: CMakeLists.txt  main.cpp
examen_lucrat/pb_written2_moodle/: CMakeLists.txt  main.cpp
examen_lucrat/pb_written3/: CMakeLists.txt  main.cpp
examen_lucrat/pb_written4/: CMakeLists.txt  main.cpp
examen_lucrat/pb_written5/: CMakeLists.txt  main.cpp
examen_lucrat/produse/: CMakeLists.txt  Exceptions.cpp  Exceptions.h  GUIObserver.cpp  GUIObserver.h  MyTableView.cpp  MyTableView.h  Produse.cpp  Produse.h  RepoProduse.cpp  RepoProduse.h  Service.cpp  Service.h  main.cpp  produse.txt
examen_lucrat/q&a_site/: Answer.cpp  Answer.h  CMakeLists.txt  GUIObserver.cpp  GUIObserver.h  Question.cpp  Question.h  RepoAnswers.cpp  RepoAnswers.h  RepoQuestions.cpp  RepoQuestions.h  RepoUsers.cpp  RepoUsers.h  Service.cpp  Service.h  User.cpp  User.h  answers.txt  exceptions.cpp  exceptions.h  main.cpp  questions.txt  users.txt
examen_lucrat/romana_scris_clase/: CMakeLists.txt  main.cpp
examen_lucrat/screen_writing/: CMakeLists.txt  Exceptions.cpp  Exceptions.h  GUIObserver.cpp  GUIObserver.h  Idea.cpp  Idea.h  MyTableView.h  PT_plot.txt  RepoIdea.cpp  RepoIdea.h  RepoWriter.cpp  RepoWriter.h  Service.cpp  Service.h  Writer.cpp  Writer.h  ideas.txt  main.cpp  writers.txt
examen_lucrat/smoothie/: CMakeLists.txt  main.cpp
examen_lucrat/test_romana/test_romana/: CMakeLists.txt  Concert.cpp  Concert.h  Data.cpp  Data.h  Repository.cpp  Repository.h  Service.cpp  Service.h  concerte.txt  ieftin.txt  main.cpp  rezonabil.txt  scump.txt
examen_lucrat/test_romana/test_romana/Qt/: QtMenu.cpp  QtMenu.h  QtUi.cpp  QtUi.h
examen_lucrat/transformer/: CMakeLists.txt  main.cpp
examen_lucrat/wr1/: CMakeLists.txt  main.cpp
lab1 hw/2/: main.c
lab2 hw/untitled1/: CMakeLists.txt  DinamicArray.c  DinamicArray.h  Medicine.c  Medicine.h  Ui.c  Ui.h  main.c  repo.c  repo.h
lab2 hw/untitled2/: CMakeLists.txt  DynamicArray.c  DynamicArray.h  Planet.c  Planet.h  main.c
test_ghighi/: CMakeLists.txt  Concurent.cpp  Concurent.h  Persoana.cpp  Persoana.h  concurenti.txt  main.cpp
untitled/: CMakeLists.txt  Gene.h  main.cpp
